Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/limits/ArrayDims5.out
ArrayDims5.java:20:9: compiler.err.limit.dimensions
1 error
