Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/limits/ArrayDims5.java
/*
 * @test /nodynamiccopyright/
 * @bug 4741759
 * @summary javac fails to diagnose too many array dimensions
 * @author gafter
 *
 * @compile/fail/ref=ArrayDims5.out -XDrawDiagnostics ArrayDims5.java
 */

public abstract class ArrayDims5 {
    abstract int
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        f()
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][]
        [][][][][][][][][][][][][][][][];
}
